@@ -204,7 +204,7 @@ en-US:
   STR_DRONE_MEDIKIT_WEAPON: "Drone Medikit"
   STR_DRONE_MEDIKIT_CORPSE: "Damaged Drone/Medikit"
   STR_DRONE_MEDIKIT_REPAIR: "Repair Drone/Medikit"
-  STR_DRONE_MEDIKIT_UFOPEDIA: "This scout drone was equipped with a slightly modified version of our handheld medikit, allowing it to treat friend or foe in even extremly dangerous situations. The drone itself can still be used for scouting purposes, but be aware of the fact that the armor had to be reduced due to the installment of the medical equipment. The drone can be used the same way as a soldier equipped with a medikit, it holds double the charges then the medikit."
+  STR_DRONE_MEDIKIT_UFOPEDIA: "This scout drone was equipped with a slightly modified version of our handheld medikit, allowing it to treat friend or foe in even extremly dangerous situations. The drone itself can still be used for scouting purposes, but be aware of the fact that the armor had to be reduced due to the installment of the medical equipment. The drone can be used the same way as a soldier equipped with a medikit, it holds double the charges then the Medikit and is twice effective."
   STR_UPGRADE_DRONE_MEDIKIT_TO_SCANNER: "Drone/Medikit -> Scanner"
   STR_UPGRADE_DRONE_MEDIKIT_TO_TASER: "Drone/Medikit -> Taser"
   STR_UPGRADE_DRONE_MEDIKIT_TO_ALLOY_SCOUT: "Drone/Medikit -> Alloy Scout"
@@ -266,7 +266,7 @@ en-US:
   STR_ALLOY_DRONE_MEDIKIT_WEAPON: "Alloy Drone Medikit"
   STR_ALLOY_DRONE_MEDIKIT_CORPSE: "Damaged Alloy Drone/Medikit"
   STR_ALLOY_DRONE_MEDIKIT_REPAIR: "Repair Alloy Drone/Medikit"
-  STR_ALLOY_DRONE_MEDIKIT_UFOPEDIA: "Equiping the former drones with alloy armor allowed also the upgrade the medikit support design, it now holds more medical equipment to treat friend our foe in the need of medical aid. Holds double the charges of a Medikit."
+  STR_ALLOY_DRONE_MEDIKIT_UFOPEDIA: "Equiping the former drones with alloy armor allowed also the upgrade the medikit support design, it now holds more medical equipment to treat friend our foe in the need of medical aid. Holds double the charges of a Medikit and is twice effective."
   STR_UPGRADE_ALLOY_DRONE_MEDIKIT_TO_ALLOY_SCOUT: "Alloy Drone/Medikit -> Alloy Scout"
   STR_UPGRADE_ALLOY_DRONE_MEDIKIT_TO_ALLOY_SCANNER: "Alloy Drone/Medikit -> Alloy Scanner"
   STR_UPGRADE_ALLOY_DRONE_MEDIKIT_TO_ALLOY_ADVANCED_MEDIKIT: "Alloy Drone/Medikit -> Alloy Adv. Medikit"
@@ -281,7 +281,7 @@ en-US:
   STR_ALLOY_DRONE_ADVANCED_MEDIKIT_WEAPON: "Alloy Drone Advanced Medikit"
   STR_ALLOY_DRONE_ADVANCED_MEDIKIT_CORPSE: "Damaged Alloy Drone/Adv. Medikit"
   STR_ALLOY_DRONE_ADVANCED_MEDIKIT_REPAIR: "Repair Alloy Drone/Adv. Medikit"
-  STR_ALLOY_DRONE_ADVANCED_MEDIKIT_UFOPEDIA: "Equiping the former drones with alloy armor allowed also the upgrade the medikit support design, it now holds more medical equipment to treat friend our foe in the need of medical aid. A redesign of the diagnose and applicatioin module also allows for a more rapid treatment. Holds double the charges of a Advanced Medikit."
+  STR_ALLOY_DRONE_ADVANCED_MEDIKIT_UFOPEDIA: "Equiping the former drones with alloy armor allowed also the upgrade the medikit support design, it now holds more medical equipment to treat friend our foe in the need of medical aid. A redesign of the diagnose and applicatioin module also allows for a more rapid treatment. Holds double the charges of a Advanced Medikit and is twice effective."
   STR_UPGRADE_ALLOY_DRONE_ADVANCED_MEDIKIT_TO_ALLOY_SCOUT: "Alloy Drone/Adv. Medikit -> Alloy Scout"
   STR_UPGRADE_ALLOY_DRONE_ADVANCED_MEDIKIT_TO_ALLOY_SCANNER: "Alloy Drone/Adv. Medikit -> Alloy Scanner"
   STR_UPGRADE_ALLOY_DRONE_ADVANCED_MEDIKIT_TO_ALLOY_TASER: "Alloy Drone/Adv. Medikit -> Alloy Taser"
@@ -334,7 +334,7 @@ en-US:
   STR_HOVERDRONE_ADVANCED_MEDIKIT_WEAPON: "Hoverdrone Advanced Medikit"
   STR_HOVERDRONE_ADVANCED_MEDIKIT_CORPSE: "Damaged Hoverdrone/Adv. Medikit"
   STR_HOVERDRONE_ADVANCED_MEDIKIT_REPAIR: "Repair Hoverdrone/Adv. Medikit"
-  STR_HOVERDRONE_ADVANCED_MEDIKIT_UFOPEDIA: "The automated 3D maneuverable medic, ready for stimming, healing and reviving even in the most dangerous places, unfortunatly we had to reduce its armor. It now holds more medical equipment to treat friend our foe in the need of medical aid. A redesign of the diagnose and applicatioin module also allows for a more rapid treatment. Holds double the charges of a Advanced Medikit."
+  STR_HOVERDRONE_ADVANCED_MEDIKIT_UFOPEDIA: "The automated 3D maneuverable medic, ready for stimming, healing and reviving even in the most dangerous places, unfortunatly we had to reduce its armor. It now holds more medical equipment to treat friend our foe in the need of medical aid. A redesign of the diagnose and applicatioin module also allows for a more rapid treatment. Holds double the charges of a Advanced Medikit and is twice effective."
   STR_UPGRADE_HOVERDRONE_ADVANCED_MEDIKIT_TO_HOVER_SCOUT: "Hoverdrone/Adv. Medikit -> Hover Scout"
   STR_UPGRADE_HOVERDRONE_ADVANCED_MEDIKIT_TO_HOVER_SCANNER: "Hoverdrone/Adv. Medikit -> Hover Scanner"
   STR_UPGRADE_HOVERDRONE_ADVANCED_MEDIKIT_TO_HOVER_TASER: "Hoverdrone/Adv. Medikit -> Hover Taser"
