@@ -6,6 +6,7 @@ Version 0.99.9.8
  - Adjust Tank to behave like Tanks (they now can take some abuse for 2-3 turns)
  - Adjust Terrorunits in regard of floatheight and damage resistance
  - Adjust PSI Defense for some Terrorunits and some other enemies
+ - Adjust Drone Medikits are twice effective then normal ones (e.g.: max 12HP per fatal wound can be restored)
 
 Version 0.99.9.7
  - Fix Wrong Unknown Var definition in alienDeployments
